Actions
Bug #2045
closedeject fails for active console user
Start date:
2012-01-30
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
$ eject cdrom
eject of cdrom /dev/dsk/c2t1d0s2 failed: hal-storage-can-unmount-volumes-mounted-by-others refused uid 101
- HAL is not evaluating active console user but /dev/console, it is regression from integration of Virtual Terminals.
Files
Related issues
Updated by Rich Lowe over 10 years ago
- Project changed from OpenIndiana Distribution to illumos gate
- Category deleted (
OS/Net (Kernel and Userland))
Updated by Rich Lowe over 10 years ago
- Category set to lib - userland libraries
- Status changed from In Progress to Resolved
Resolved in r13590 commit:48985d630b76
Actions