2045 eject fails for active console user Reviewed by: Andrew Stormont <Andrew.Stormont@nexenta.com> Reviewed by: Albert Lee <trisk@nexenta.com> Approved by: Richard Lowe <richlowe@richlowe.net>